<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sell.liqihao.sellsystem.Login.ui.RegisterActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/registertitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/register_title"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:background="@color/colorPrimary"
        android:text="萌芽家具配件"
        android:textColor="@color/white1"
        android:gravity="end"
        android:paddingTop="50dp"
        android:paddingRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="UselessLeaf"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/register_username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/Setting_tv"
                android:text="@string/register_username" />

            <EditText
                android:id="@+id/register_edt_username"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/Setting_tv"
                android:text="@string/register_password" />

            <EditText
                android:id="@+id/register_edt_password"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                tools:ignore="InefficientWeight"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_confirmpassword"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/Setting_tv"
                android:text="@string/register_confirmpassword" />

            <EditText
                android:id="@+id/register_edt_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_tel"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/Setting_tv"
                android:text="@string/register_tel" />

            <EditText
                android:id="@+id/register_edt_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_confirm"
            android:layout_marginTop="50dp"/>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
