<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.Login.ui.FindPassActivity"
    android:orientation="vertical">

    <include layout="@layout/tool_bar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:background="@color/colorPrimary"
        android:text="萌芽家具配件"
        android:textColor="@color/white1"
        android:gravity="end"
        android:paddingTop="50dp"
        android:paddingRight="30dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/Setting_tv"
            android:text="@string/uruserName" />

        <EditText
            android:id="@+id/findpass_edt_username"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/Setting_tv"
            android:text="@string/newPass" />

        <EditText
            android:id="@+id/findPass_edt_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            tools:ignore="InefficientWeight"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_confirmpassword"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/Setting_tv"
            android:text="@string/register_confirmpassword" />

        <EditText
            android:id="@+id/register_edt_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <Button
        android:id="@+id/findPass_sure"
        android:textColor="#FF6B6B"
        android:text="@string/sure"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>