<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.UserCenter.ui.UserCenterActivity"
    android:orientation="vertical">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/usercenter_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nickName"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/usercenter_nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/usercenter_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/usercenter_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="余额:"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/usercenter_chongzhi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="充值"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="地址"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/usercenter_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textSize="16sp" />
    </LinearLayout>






</LinearLayout>